#2409 fix the layout issue

--- a/src/assets/css/table.css
+++ b/src/assets/css/table.css
@@ -368,6 +368,7 @@
 
 .table-flex-wrapper-row {
     flex-direction: row;
+    flex: initial;
 }
 
 .row-bordered-bottom td {
